  intention of making it cleaner. Maintain a focus on writing clean and
  understandable code. 
- Task completed. Code is much cleaner and edit functionality has been  
  retained. 

------------------------------------------------------------------------
< 26/06/18 mon 1:59 pm >

- Making a design decision. Either we do constant book-keeping tasks
  to keep a table with all the availabilites or we recalculate the 
  availabilities each time. The first option is more scalable but
  makes it difficult to update whenever we delete a member. 
  Our team is small and so we should not need to find than 25 
  availabilities at a time. Thus we will recalculate the availabilities 
  each time. 
- Basic find has been implemented. 

------------------------------------------------------------------------
< 09/07/18 mon 12:46 pm >

- It is time for a patch. Going to try to update the add member process
  so that there are 3 sepearate stages: add name, add face to face avail,
  and add non face to face avail. 

------------------------------------------------------------------------
< 10/07/18 tue 01:20 pm >

- Add name has been converted to a 3 step process. Added javascript to 
  transition smoothly between them. Changed the colours for face to face
  and online availabilities to distinguish between which one is being
  filled in. 

------------------------------------------------------------------------
< 12/07/18 thu 12:02 pm >

- Edit mem also needs to be converted so that both availabilities can be 
  edited and switched between using javascript. 
- Did some clean up of code for app.js.
- Edit member now displays correctly.

------------------------------------------------------------------------
< 16/07/18 mon 01:13 pm >

- Display needs to highlight the table cells where all members are present.
- Created an object allPresent, and a function to extract the key value pairs
  of this object in order to implement this functionality. 