@@ -12,6 +12,7 @@ h3 {
 	font-weight: 300;
 }
 
+
 input {
 	font-family: 'Montserrat';
 	width: 300px;
@@ -82,6 +83,10 @@ label {
 
 .warning {
 	display: none;
+}
+
+.invalidInput {
+	color: red;
 }
 
 .unselectable {
