@@ -13,6 +13,8 @@ html
 				h3.
 					A Team Availability Scheduler.#[br]
 					for the HR Manager
+				if (success == -1) 
+					h4.invalidInput You did not select any members to display!
 			.option-select
 				.row.option-row 
 					.col-md-6 
